THRIFT-2458 Generated code for oneway function